--- a/server/views/layout.ejs
+++ b/server/views/layout.ejs
@@ -6,8 +6,8 @@
         <!-- CSS -->
         <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
-        
-        <title>Node.js $ Passport App</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+        <title>Home - FileUpload->Multer</title>
     </head>
     <body>
         <div class="container">
@@ -18,5 +18,6 @@
         <!-- SCRIPTS -->
         <script src="/jquery/dist/jquery.min.js"></script>
         <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>  
    </body>
 </html>
